[tool.poetry]
name = "content-creator"
version = "0.1.0"
description = ""
authors = ["Karan Jakhar <rockingkjakhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.2.24"
langchain-openai = "^0.1.19"
ipykernel = "^6.29.5"
fastapi = {extras = ["standard"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
